[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "videoeditor"
author = "Pablo Cárdenas"
author-email = "pablo.cardenas@imca.edu.pe"
requires = [
    "pandas",
    "SQLAlchemy",
    "matplotlib",
]

[tool.flit.scripts]
videoeditor = "videoeditor.commands:cli"
